[package]
name = "protocol-schema-check"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
near-structs-checker-lib = { workspace = true, features = ["protocol_schema"] }
near-primitives-core = { workspace = true, features = ["protocol_schema"] }
near-primitives = { workspace = true, features = ["protocol_schema"] }
near-stable-hasher.workspace = true

serde_json = { workspace = true, features = ["preserve_order"] }
inventory.workspace = true
toml.workspace = true
rustc_version = "0.4.0"
actix.workspace = true
#borsh.workspace = true
#chrono.workspace = true
clap.workspace = true
futures.workspace = true
hex.workspace = true
itertools.workspace = true
openssl.workspace = true
#rand.workspace = true
#serde.workspace = true

[features]
default = [
  "near-primitives-core/protocol_schema",
  "near-primitives/protocol_schema"
]
