[package]
name = "rocksdb-state-player"
version = "0.0.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
publish = false
# Please update rust-toolchain.toml as well when changing version here:
rust-version = "1.60.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

near-chain-configs = { path = "../../core/chain-configs" }
nearcore = { path = "../../nearcore" }
near-o11y = { path = "../../core/o11y" }
near-store = { path = "../../core/store" }
near-primitives-core = { path = "../../core/primitives-core" }
